Fix nav content height issue on mobile devices

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -44,7 +44,6 @@
 
 .navbar-content {
   position: fixed;
-  height: 100%;
   left: 20%;
   right: 0;
   transform: translateX(100vw);
@@ -57,6 +56,7 @@
   justify-content: flex-end;
   gap: 2rem;
   z-index: 4;
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 .navbar-content:hover {
